--- a/Eng-Software/plano_de_manutenção.tex
+++ b/Eng-Software/plano_de_manutenção.tex
@@ -9,20 +9,20 @@ O nosso plano de manutenção é baseado num modelo estruturado que visa a passa
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=15cm]{Pedidos_Manutençao}
+	\includegraphics[width=15cm]{Pedidos_Manutencao}
 	\caption{Manutenção estruturada e não estruturada}
 	\label{fig:Pedidos_Manutencao}
 \end{figure}
 
 \subsection{As categorias de manutenção}
--Manutenção corretiva 
+-Manutenção corretiva:\\
 Tem como objetivo encontrar, identificar e corrigir os erros.\\
--Manutenção adaptativa
+\\-Manutenção adaptativa:\\
 É a adaptação do software ao ambiente.\\
--Manutenção perfectiva
+\\-Manutenção perfectiva:\\
 Baseia-se no atendimento a pedidos de utilizadores e "feedback" para modificar funcionalidades ou adicionar novas com fim de melhorar o sistema.\\
--Manutenção preventiva
-Esta ocorre normalmente durante o desenvolvimento do sistema, é preparar e melhorar a manutenibilidade, fornecendo uma boa fundação para conseguir fazer adapatações e futuros melhoramentos.
+\\-Manutenção preventiva:\\
+Esta ocorre normalmente durante o desenvolvimento do sistema, é preparar e melhorar a manutenibilidade, fornecendo uma boa fundação para conseguir fazer adaptações e futuros melhoramentos.
 
 \subsection{Ações e equipas}
 Para conseguirmos uma manutenção efetiva pós lançamento temos que primeiro estabelecer uma equipa focada nessa secção. Dado que de momento só existe a nossa equipa de 3 membros, também seremos a equipa de manutenção até quando houver a opção de aumentar a nossa equipa e ou designar uma equipa só mesmo focada na manutenção.\\
@@ -31,9 +31,9 @@ Depois é feita a descrição e definição de eventos sequenciais.\\
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=15cm]{Pedidos_Manutencao2}
+	\includegraphics[width=15cm]{Pedidos_Manutencao_2}
 	\caption{Sequência de eventos}
-	\label{fig:Pedidos_Manutençao2}
+	\label{fig:Pedidos_Manutencao_2}
 \end{figure}
 \\
 Em continuação, estabelecemos procedimentos para registrar o histórico de atividades feitas na manutenção e depois definimos critérios de avaliação e revisão.
