--- a/Eng-Software/referencias.tex
+++ b/Eng-Software/referencias.tex
@@ -1,5 +1,15 @@
 \chapter{Referências}
 \label{referencias}
+Durante a realização deste documento foi usado principalmente os "PowerPoints" entregues via moodle pelo docente da cadeira, mas principalmente os:\\
+- ES P01 - Apresentação\\
+- ES P02 - Descrição do Plano de projeto\\
+- ES P03 - Sistemas de Preparação de Documentos\\
+- ES P04 - Esboço do Plano de Projeto\\
+- ES P10 - Introdução aos testes de software\\
+- ES P11 - Sistemas de testes de software\\
+\\
+Também foi usado o documento de Especificação de Requisitos realizado pelo mesmo grupo no ano passado para o mesmo docente, que serviu como base de contrução para este documento.\\
+
 \section{Plano de segurança}
 \\
 -https://www.meupositivo.com.br/panoramapositivo/seguranca-da-informacao/ \\
@@ -11,6 +21,7 @@
 Este capitulo foi construido com base na consulta e leitura dos seguintes sites:\\
 -Site Linkedin,escrito por Claudia F. R. \\
 https://pt.linkedin.com/pulse/importância-de-um-plano-qualidade-software-e-testes-farias-ctfl \\
+
 -Site Project Builder\\
 https://www.projectbuilder.com.br/blog/importancia-da-gestao-da-qualidade-em-projetos-2/\\
 
