--- a/Eng-Software/conclusão.tex
+++ b/Eng-Software/conclusão.tex
@@ -1,10 +1,11 @@
 \chapter{Conclusão}
 \label{conclusão}
 \section{Reflexões}
-O projeto foi realizado e desenvolvido por uma equipa com um nível de comunicação alto, e através dessa facilidade criou-se um sistema de desenvolvimento aberto a ideias e a mudanças, este processo abrir as portas a ideais novas, mas também conseguiu decidir quando algo estava errado ou aprofundado demasiado. Estas mudanças foram na maioria positivas, mesmo quando houve discussões sobre adicionar ou remover funcionalidades ou a mudança das mesmas, a equipa tomou sempre uma posição conjunta após o debate destas ideias.\\
-A construção deste documento também criou um desenvolvimento mais pensado e realizado de funcionalidades que ainda não estavam propriamente pensadas, permitindo a criação e a separação de trabalho das mesmas entre a equipa.
+O projeto foi realizado e desenvolvido por uma equipa com um nível de comunicação alto, e através dessa facilidade criou-se um sistema de desenvolvimento aberto a ideias e mudanças, este processo expandiu a nossa visão do projeto, mas também revelou quando uma ideia não era propriamente necessária ou se foi aprofundada demasiado. Estas mudanças foram na maioria positivas, mesmo quando houve discussões sobre adicionar, remover ou mudar funcionalidades, a equipa tomou sempre uma posição conjunta após o debate das mesmas.\\
+A construção deste documento também criou um desenvolvimento mais refletido e realizado de funcionalidades que ainda não estavam propriamente pensadas, permitindo a criação e separação de trabalho das mesmas entre a equipa.
 \section{Áreas de Melhoramento}
-No contexto de melhoramento do projeto, a equipa apercebeu-se de limites de conhecimento ou de tempo, que fechou vários caminhos para o projeto no plano atual, que no futuro poderão ser de novo abrangidas pela a equipa.\\
+No contexto de melhoramento do projeto, a equipa apercebeu-se de limites a nível de conhecimento ou tempo, que fechou vários caminhos para o projeto no plano atual, que no futuro poderão ser de novo abrangidos pela a equipa.\\
 Estas áreas, como por exemplo o design da aplicação ou limitações de software, poderiam ser melhoradas ou atualizadas quando o projeto for retomado pela a equipa. 
 \section{Espetativas de Trabalho Futuro}
-Este projeto tem potencial para ser retomado pela a mesma equipa no futuro, durante o desenvolvimento do mesmo a equipa mostrou interesse em continuar a produção do mesmo, e criamos a aplicação já com a ideia que é algo que o mercado atual, com o crescimento de "take-aways" e "internet shopping" durante a pandemia Covid-19, poderá mostrar interesse, claro que a equipa ainda não realizou testes de mercado ou entrevistas de interesse mas sempre tivemos em mente o potencial de trabalho futuro na mesma.
+Este projeto tem potencial para ser retomado pela a equipa no futuro\\
+Durante o desenvolvimento a equipa mostrou interesse em continuar a produção do mesmo, e criamos a aplicação já com a ideia que é algo que o mercado atual, com o crescimento de "take-aways" e "internet shopping" durante a pandemia Covid-19, poderá mostrar interesse, claro que a equipa ainda não realizou testes de mercado ou entrevistas de interesse mas sempre tivemos em mente o potencial em trabalhar neste projeto no futuro.
