--- a/Eng-Software/descricao_tecnica_dos_sistemas.tex
+++ b/Eng-Software/descricao_tecnica_dos_sistemas.tex
@@ -191,12 +191,12 @@ O sistema "sign up" que definimos com os campos que tem de ser preenchidos e de 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=15cm]{"mockup log in"}
-	\caption{Página Web da ePadaria: Log in}
+	\caption{Página Web da ePadaria: Login}
 	\label{fig:mockup-log-in}
 \end{figure}
 
 Após efetuar o "login", o ícone "Login"  irá aparecer com o nome do cliente que definiu no site.\\
-Se o funcionário quiser entrar na página definida para si, terá que aceder ao "login"  e de seguida escolher a opção  "LogIn Funcionário".
+Se o funcionário quiser entrar na página definida para si, terá que aceder ao "login"  e de seguida escolher a opção  "Login Funcionário".
 
 \begin{figure}[H]
 	\centering
@@ -220,7 +220,7 @@ Após efetuar o login de funcionário, ele mesmo poderá aceder ao histórico de
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=15cm]{produtos2}
-	\caption{Página Web da ePadaria: Carrinho/Comprar}
+	\caption{Página Web da ePadaria: Listagem de Produtos}
 	\label{fig:produtos2}
 \end{figure}
-Nesta imagem temos um mock-up muito inicial do carrinho após o "login" e ter carregado no cesto/carrinho de compras.
+Nesta imagem temos um mock-up muito inicial da listagem de Produtos.
