--- a/Eng-Software/descricao_tecnica_dos_sistemas.tex
+++ b/Eng-Software/descricao_tecnica_dos_sistemas.tex
@@ -128,7 +128,7 @@ Lista de requisitos para o caso de uso Receção de um pedido efetuado por e-mai
 \end{figure}
 
 \section{Descrição do estrutura física do hardware}
-A maneira mais viável de efeituar o seu uso, seria num computador ou tablet, porque devido á estrutura mais pequena do telemóvel é mais difícil de usar, logo foi desenhado mais para uso no computador e nos seus "browsers". \\
+A maneira mais viável de efetuar o seu uso, seria num computador ou tablet, porque devido á estrutura mais pequena do telemóvel é mais difícil de usar, logo foi desenhado mais para uso no computador com o auxilio de um browser. \\
 Não é necessário ter um dispositivo de alto desempenho para se poder aceder ao site e ser usado, apenas é necessário ter os requisitos mínimos.\\
 De acordo com um documento de \textbf{Requisitos de aplicação Web da Microsoft}, os \textbf{requisitos mínimos e recomendados de hardware} são:\\
 \\ \textbf{Mínimo}\\
