--- a/Eng-Software/introducao.tex
+++ b/Eng-Software/introducao.tex
@@ -2,9 +2,10 @@
 \label{introdução}
 \section{Descrição dos objetivos do documento}
 \subsection{Enquadramento incial}
-Este documento enquadra-se no desenvolvimento do projeto \textbf{ePadaria} , e tem como principais objetivos organizar,planear e solidificar um plano de projeto para o sistema.
-A ideia do ePadaria começou pela cadeira de \textbf{Análise de Sistemas}, o tema foi um dos três temas escolhidos pelo nosso grupo e proposto pelo nossos professor, durante essa cadeira fomos aprendendo sobre requisitos e no final desenvolvemos o documento de requisitos para o ePadaria. No documento definimos os casos de uso,requisitos,os nosso atores,os pacotes do sistema e os nossos fluxos.\\
-Continuamos o desenvolvimento do documento de requisitos mas, com este documento desenvolvido para a cadeira de Engenharia de Software, onde iremos aprender mais um gênero de documento, outras práticas na escrita do mesmo e alargar os nosso conhecimentos.
+Este documento enquadra-se no desenvolvimento do projeto \textbf{ePadaria} , e tem como principais objetivos organizar, planear e solidificar um plano de projeto para o sistema.
+A ideia do ePadaria começou pela cadeira de \textbf{Análise de Sistemas}, o tema foi um dos três temas escolhidos pelo nosso grupo e proposto pelo nossos professor, durante essa cadeira fomos aprendendo sobre requisitos e no final desenvolvemos o documento de requisitos para o ePadaria. No documento definimos os casos de uso, requisitos, os nossos atores, os pacotes do sistema e os nossos fluxos.\\
+Continuamos o desenvolvimento do documento de requisitos, mas, com este documento desenvolvido para a cadeira de Engenharia de Software, onde iremos aprender mais um gênero de documento, outras práticas na escrita do mesmo e alargar os nossos conhecimentos.
+
 
 \subsection{Público alvo}
 O público alvo do nosso projeto são a maioria das padarias que se apresentam sem um sistema de gestão de pedidos.\\
@@ -12,5 +13,5 @@ O ePadaria só irá se destinar a pequenas padarias com a necessidade de passar 
 
 \section{O propósito do projeto a desenvolver}
 O projeto \textbf{ePadaria} tem como objetivo apoiar os pequenos negócios, nomeadamente empresas pequenas, este sistema irá ajudar a simplificar a estrutura dos processos de uma padaria, tendo em conta o fornecimento, processamento, criação e entrega dos produtos.\\
-As padarias locais é um estabelecimento que todos nós frequentamos mesmo que raramente, para além de ser um projeto de seguimento a uma cadeira anterior o facto de gostarmos dos produtos vendidos nas padarias e ser gerido muitas vezes por pessoas com quem relacionamos queremos ajuda-las com o nosso projeto. Podemos observar ao frequentar padarias que muitas não possuem sistemas informatizados e queremos mudar esse aspeto no mercado.
+As padarias locais são um estabelecimento que todos nós frequentamos mesmo que raramente, para além de ser um projeto de seguimento a uma cadeira anterior o facto de gostarmos dos produtos vendidos nas padarias e ser gerido muitas vezes por pessoas com quem relacionamos queremos ajudá-las com o nosso projeto. Podemos observar ao frequentar padarias que muitas não possuem sistemas informatizados e queremos mudar esse aspeto no mercado.
 \\
