--- a/Eng-Software/standards_tecnicas_ferramentas.tex
+++ b/Eng-Software/standards_tecnicas_ferramentas.tex
@@ -6,16 +6,16 @@
 O código que diz respeito á organização ao desenvolver na ePadaria, irá ser organizado por parte do cliente e funcionário onde cada um irá ter acessos diferentes além de aspetos em comum.
 \subsection{Especificação}
 A ePadaria é constituída pela parte do cliente e a parte do funcionário e ambos terão acesso ás páginas dos contactos e da informação sobre nós, sem haver necessidade de estar registado no ePadaria para ver essa informação.\\
-O cliente vai poder se registar e efetuar o login no nosso sistema onde irá inserir os dados necessários para poder fazer pedidos pelo nosso sistema ás padarias pretendidas. Poderá também aceder aos produtos disponíveis e a cada produto, como também ver a respetiva padaria ou ver os pedidos em apenas uma especifica padaria. \\
+O cliente vai poder se registar e efetuar o login no nosso sistema onde irá inserir os dados necessários para poder fazer pedidos pelo nosso sistema às  padarias pretendidas. Poderá também aceder aos produtos disponíveis e a cada produto, como também ver a respetiva padaria ou ver os pedidos em apenas uma especifica padaria. \\
 O funcionário vai ter uma parte na ePadaria que só ele poderá aceder onde irá conter o necessário para poder ver os pedidos efetuados pelos clientes, incluindo os que já foram concluídos. Poderá ver as informações dos produtos pedidos pelo cliente, quem efetuou o pedido e a data e hora do mesmo. Na parte dos produtos, o funcionário pode eliminar ou acrescentar novos para o cliente poder comprar, terá de inserir a informação do produto referente ao nome e breve descrição.
 
 \subsection{Documentação}
-Para implementar o ePadaria, tal como outros sistemas semelhantes, foi feito diversos tipos de documentos necessários,começando com o documento de requisitos. O documento de requisitos é a base do sistema que segue a seguir de aprovação.\\
+Para implementar o ePadaria, tal como outros sistemas semelhantes, foi feito diversos tipos de documentos necessários, começando com o documento de requisitos. O documento de requisitos é a base do sistema que segue a seguir de aprovação.\\
 Existem vários documentos usados á parte para o ePadaria que são dados como Plano. O plano de qualidade ajuda a manter a qualidade do sistema acompanhando desde o inicio ao fim do projeto, o plano de gestão de dados que fala sobre a base de dados e como os dados são geridos, o plano de gestão de recursos onde é mencionado recursos e como são afetados com o ePadaria,o plano de testes fala dos diversos tipos de testes realizados ao sistema,o plano de formação, o de segurança e manutenção.
 
 
 \section{Técnicas}
-Ao longo do desenvolvimento da documentação e desenvolvimento do sistema ePadaria é aplicado técnicas dadas e aprendidas nas respetivas cadeiras de Analise e Desenho De Sistemas, Engenharia de Software e Programação para web.\\
+Ao longo do desenvolvimento da documentação e do sistema ePadaria é aplicado técnicas dadas e aprendidas nas respetivas cadeiras de Analise e Desenho De Sistemas, Engenharia de Software e Programação para web.\\
 Na cadeira de Análise e Desenho de sistemas, aprendemos técnicas e práticas para construir o documento de requisitos, para além de onde surgiu a ideia do sistema ePadaria, que tem o intuito de ajudar as pequenas padarias sem sistema informático. É usado técnicas como construção de diagramas aos quais:\\ 
 \\-diagramas de casos de uso;\\ 
 -diagramas de classe;\\
