--- a/Eng-Software/calendarizacao.tex
+++ b/Eng-Software/calendarizacao.tex
@@ -2,7 +2,7 @@
 \label{calendarizacao}
 \subsection{Etapas a realizar}
 \subsubsection{	Começar,organizar e preparar...}
-A Epadaria começou como um simples projeto de Análise e Desenho de Sistemas, uma disciplina na Universidade Lusófona do Porto, este tema de uma "gestão de padaria" foi rapidamente desenvolvida pelo grupo "4" de 3 estudantes informáticos, que chegaram á ideia da "ePadaria". Das conclusões tiradas no final, é que se viu uma oportunidade em continuar, explorar e desenvolver este projeto mais longe e com as oportunidades de o fazer, a equipa de desenvolvimento decidiu continuar o projeto "ePadaria" nas várias cadeiras acadêmicas seguintes, mas para seguir em frente este mesmo documento/esboço/texto será realizado e completado, para ter uma fonte única e verdadeira que serve como estrutura ao Projeto. Tanto para planear, gerir e controlar, este passo é essencial como fundação do projeto. Com várias semanas para preparar, escrever e organizar estamos confiantes no resultado deste projeto e que seja tudo entregue a tempo.
+A ePadaria começou como um simples projeto de Análise e Desenho de Sistemas, uma disciplina na Universidade Lusófona do Porto, este tema de uma "gestão de padaria" foi rapidamente desenvolvida pelo grupo "4" de 3 estudantes informáticos, que chegaram á ideia da "ePadaria". Das conclusões tiradas no final, é que se viu uma oportunidade em continuar, explorar e desenvolver este projeto mais longe e com as oportunidades de o fazer, a equipa de desenvolvimento decidiu continuar o projeto "ePadaria" nas várias cadeiras acadêmicas seguintes, mas para seguir em frente este mesmo documento/esboço/texto será realizado e completado, para ter uma fonte única e verdadeira que serve como estrutura ao Projeto. Tanto para planear, gerir e controlar, este passo é essencial como fundação do projeto. Com várias semanas para preparar, escrever e organizar estamos confiantes no resultado deste projeto e que seja tudo entregue a tempo.
 \subsubsection{Desenvolvimento do projeto.}
 Devido á natureza do projeto e do local acadêmico, o mesmo encontra-se em várias fases da sua vida, neste momento a mesma equipa de desenvolvimento encontra-se a criar este esboço do projeto e ao mesmo tempo já a desenvolve-lo noutra disciplina, enquanto fazem a base de dados noutra, criando uma união de projeto em várias disciplinas. De qualquer maneira, o desenvolvimento neste momento encontra-se na fase inicial com a criação do sistema "login", das bases de dados e a conexão entre eles, tendo o objetivo de apresentar um "working prototype" no inicio do próximo mês. Com ainda maior parte dos sistemas para implementar e programar e os testes todos que vêm com eles, a equipa de desenvolvimento sabe o que fazer, tendo os recursos e tempo para o concretizar.
 \subsubsection{Acabar o projeto.}
