--- a/Eng-Software/plano_de_formaçao.tex
+++ b/Eng-Software/plano_de_formaçao.tex
@@ -8,4 +8,9 @@ Oferecemos ajuda ao cliente no momento, caso for preciso responder alguma dúvid
  -Contacto via telefone;\\
 	E possivelmente fazer a adição de um sistema de ajuda online seja automizado ou de contacto direto com o cliente.\\
 O segundo método seria vídeos feitos pela equipa de desenvolvimento, como por exemplo tutoriais, que mostrassem como fazer certas operações usando a webapp com narração ( e poderiam ser animados também).\\
- 
+ \begin{figure}[H]
+ 	\centering
+ 	\includegraphics[width=15cm]{tutorial}
+ 	\caption{Exemplo de um thumbnail de um tutorial}
+ 	\label{fig:tutorial}
+ \end{figure}
