--- a/Eng-Software/ambito.tex
+++ b/Eng-Software/ambito.tex
@@ -3,7 +3,7 @@
 \section{Apresentação}
 \subsection{Contexto e Enquadramento}
 Este sistema apresentou-se num contexto que muitos de nós nos encontramos na grande cidade do Porto e em todo Portugal, a percentagem de pequenos negócios é maior que a percentagem de grandes empresas que existe no nosso país.\\
-A ePadaria enquadra-se nessa realidade, uma que facílmente pode ser preenchida por este mesmo sistema que só traria vantagens ao utilizador e ao consumidor no intúito de fornecer um sistema de fácil utilização e manutenção para essas padarias. É esperado por parte da ePadaria para ajudar nesse contexto um sistema rápido e de maneira que vários utilizadores de dentro da padaria possam vir a usar o sistema ao mesmo tempo e não apenas por um utilizador. \\
+A ePadaria enquadra-se nessa realidade, uma que facilmente pode ser preenchida por este mesmo sistema que só traria vantagens ao utilizador e ao consumidor no intuito de fornecer um sistema de fácil utilização e manutenção para essas padarias. É esperado por parte da ePadaria para ajudar nesse contexto um sistema rápido e de maneira que vários utilizadores de dentro da padaria possam vir a usar o sistema ao mesmo tempo e não apenas por um utilizador. \\
 Esta área de negócio exige interação com o cliente desde venda e encomenda de produtos ,como confeção dos próprios produtos com auxílio da cozinha e adquirindo os produtos necessários para os confeccionar, o que haverá existência de "stock" de ingredientes. Para além dos pedidos feitos pelos clientes é necessário haver uma quantidade feita de produtos diária para venda aos clientes que passem pelas padarias e comprem. Também é uma área de negócio que requere limpeza e qualidade para conseguirem vender os produtos.\\
  Podemos ver que existem mais pequenas padarias por vezes mais que uma por rua o que se repara que parte são geridas pelos nossos vizinhos ou conhecidos. A maior parte dessas pequenas padarias já existe de negócios que foram por vezes passados de gerações anteriores ou negócios que existem á mais de vinte anos, e por essa razão essas pequenas padarias acabam por continuar a usar sempre o mesmo sistema de gestão clássico, de apontar tudo em papeis com a sua caneta, mesmo que saibam utilizar um computador. Há já muitas padarias que tem incorporado computadores para fazer pedidos na hora, com as necessidades de pagamentos a cartão e maquinetas para imprimir talões e faturas, são praticamente um requerimento hoje em dia. Como também muitas das padarias oferecem serviço de mesa como um bar ou café ou restaurante.... Para essas padarias mais evoluídas nos seus métodos e serviços, continuamos a oferecer a parte da gestão, mas a ideia é conseguir oferecer um sistema que junta tudo num só com a chance de ser adaptado e evoluído para as necessidades de cada cliente.
    Com isso o nosso sistema pretende ajudar essas pequenas empresas/padarias.\\
@@ -14,11 +14,11 @@ Esta área de negócio exige interação com o cliente desde venda e encomenda d
 \section{Decomposição funcional do sistema}
 
 
-A estrutura do ePadaria ajuda as pequenas padarias e ao qual o nosso sistema irá ser constituído pela parte do cliente que se trata da ponte de comunicação entre o lado Cliente e a Base de Dados,a parte da Padaria permite ver a informação dos pedidos, confirmar/rejeitar pedidos, adicionar pedidos, permite aceder à base de dados e uma base de dados para serem armazenados os dados e as receitas dos produtos da Padaria os que os mesmo achassem que não fosse confidencial,mas não seriam partilhadas com os clientes. Com as funcionalidades do ePadaria também facilita á parte dos funcionários a organização e rapidez que não tinham antes antes de aceder a um método de tratamento de pedidos digital.
+A estrutura da ePadaria ajuda as pequenas padarias e ao qual o nosso sistema irá ser constituído pela parte do cliente que se trata da ponte de comunicação entre o lado Cliente e a Base de Dados,a parte da Padaria permite ver a informação dos pedidos, confirmar/rejeitar pedidos, adicionar pedidos, permite aceder à base de dados e uma base de dados para serem armazenados os dados e as receitas dos produtos da Padaria os que os mesmo achassem que não fosse confidencial,mas não seriam partilhadas com os clientes. Com as funcionalidades do ePadaria também facilita á parte dos funcionários a organização e rapidez que não tinham antes antes de aceder a um método de tratamento de pedidos digital.
 
 \section{Constrangimentos do processo}
 \subsection{Desempenho esperado}
-Ainda não se conhece sistemas semelhantes como o ePadaria, então não se conhece o desempenho esperado. De forma geral será necessário um de rápido desempenho, fácil uso, manutenção e compreensão. Se não haver um sistema de rápida compreensão e desempenho, poderá vir a atrasar o trabalho por parte dos funcionários da padaria e baixar a sua produtividade, o que é algo que iria contra o objetivo do ePadaria.
+Ainda não se conhece sistemas semelhantes como a ePadaria, então não se conhece o desempenho esperado. De forma geral será necessário um de rápido desempenho, fácil uso, manutenção e compreensão. Se não haver um sistema de rápida compreensão e desempenho, poderá vir a atrasar o trabalho por parte dos funcionários da padaria e baixar a sua produtividade, o que é algo que iria contra o objetivo da ePadaria.
 
 \subsection{Limitações} 
-Há que ter em atenção de que apenas se dirige a pequenas empresas de apenas um estabelecimento, o que neste caso o ePadaria já não seria possível ser adquirido por empresas com mais que um estabelecimento. É necessário saber usar bem um computador, as pessoas que não estão habituadas ao uso de um computador podem prejudicar no começo a gestão da padaria, dado que iriam ter a necessidade de aprender como usar o sistema e demorar até ter o mesmo ritmo e rapidez de alguém que já saiba usar facilmente um computador, como também seria necessário por, parte das padarias, acesso á internet, um ou mais computadores e pagar um custo pela ePadaria.\\
+Há que ter em atenção de que apenas se dirige a pequenas empresas de apenas um estabelecimento, o que neste caso a ePadaria já não seria possível ser adquirido por empresas com mais que um estabelecimento. É necessário saber usar bem um computador, as pessoas que não estão habituadas ao uso de um computador podem prejudicar no começo a gestão da padaria, dado que iriam ter a necessidade de aprender como usar o sistema e demorar até ter o mesmo ritmo e rapidez de alguém que já saiba usar facilmente um computador, como também seria necessário por, parte das padarias, acesso á internet, um ou mais computadores e pagar um custo pela ePadaria.\\
