--- a/Eng-Software/plano_de_segurança.tex
+++ b/Eng-Software/plano_de_segurança.tex
@@ -1,26 +1,23 @@
 \chapter{Plano de segurança}
 \label{plano_de_segurança}
 \section{Segurança do nosso projeto}
-A segurança no sistema ePadaria foi sempre algo que a nossa equipa pensou um bocado e com o tempo fomos aprendendo que é fundamental num sistema como este e a proteção dos dados pessoais do cliente é necessária para conseguirmos ter um programa que cumpra todas as leis e conformidades requeridas, mas também para que haja beneficíos seja para a equipa de desenvolvimento como para parceiros e clientes.\\
+A segurança no sistema ePadaria foi sempre algo que a nossa equipa pensou um bocado e com o tempo fomos aprendendo que é fundamental num sistema como este e a proteção dos dados pessoais do cliente é necessária para conseguirmos ter um programa que cumpra todas as leis e conformidades requeridas, mas também para que haja benefícios seja para a equipa de desenvolvimento como para parceiros e clientes.\\
 
 \subsection{Quais são os princípios da segurança de informação?}
 Para conseguir resumir a complexidade da segurança de informação foram criados certos princípios a manter e são esses os mesmos que queremos praticar e aplicar no nosso projeto no seu desenvolvimento.\\
--Confidencialidade
+\\
+Confidencialidade:\\
 A confidencialidade é um dos direitos dos nossos clientes e isso significa que a informação que eles inserem no nosso programa e que entra na base de dados, só pode ser obtida e atualizada por pessoas autorizadas e devidamente credenciadas. Informações e dados importantes dos nossos clientes nunca podem ser obtidos por terceiros ou desconhecidos.
-Devem ser implementados mecanismos de segurança capazes de impedir que pessoas não autorizadas obetenham informações confidenciais.\\
-
--Confiabilidade
+Devem ser implementados mecanismos de segurança capazes de impedir que pessoas não autorizadas obtenham informações confidenciais.\\
+\\Confiabilidade:\\
 É a fidedignidade da informação. Deve ser assegurado ao utilizador, a boa qualidade dos dados com que ele estará a trabalhar.\\
-
--Integridade
-Um dos príncipios mais importantes a considerar é que haja a garantia de que a informação estará exata, completa e preservada contra alterações sem autorização, fraude ou até mesmo contra a sua destruição.
-Assim não só estaria comforme com o RGPD, mas também seriam evitadas violações de informação, sejam elas de propósito ou acidentais.\\
-
--Disponibilidade
+\\Integridade:\\
+Um dos princípios mais importantes a considerar é que haja a garantia de que a informação estará exata, completa e preservada contra alterações sem autorização, fraude ou até mesmo contra a sua destruição.
+Assim não só estaria conforme com o RGPD, mas também seriam evitadas violações de informação, sejam elas de propósito ou acidentais.\\
+\\Disponibilidade:\\
 A informação e dados devem estar continuamente disponíveis e acessíveis para pessoas autorizadas.\\
-
--Autenticidade
-Tem como objetivo fazer e manter os registos apropriados, como quem realizou acessos a dados e quando, atualizações de dados incluíndo a eliminação dos mesmos, de modo que haja confirmação da sua autoria e originalidade.
+\\Autenticidade:\\
+Tem como objetivo fazer e manter os registos apropriados, como quem realizou acessos a dados e quando, atualizações de dados incluindo a eliminação dos mesmos, de modo que haja confirmação da sua autoria e originalidade.
 
 
 \subsection{Testes de segurança}
