--- a/Eng-Software/referencias.tex
+++ b/Eng-Software/referencias.tex
@@ -12,19 +12,19 @@ Também foi usado o documento de Especificação de Requisitos realizado pelo me
 
 \section{Plano de segurança}
 \\
--https://www.meupositivo.com.br/panoramapositivo/seguranca-da-informacao/ \\
+https://www.meupositivo.com.br/panoramapositivo/seguranca-da-informacao/ 
 
 \section{Plano de manutenção}
--https://edisciplinas.usp.br/pluginfile.php/325655/mod_resource/content/1/Aula09_Manutencao.pdf\\
+https://edisciplinas.usp.br/pluginfile.php/325655/mod_resource/content/1/Aula09_Manutencao.pdf
 
 \section{Plano de qualidade}
-Este capitulo foi construido com base na consulta e leitura dos seguintes sites:\\
--Site Linkedin,escrito por Claudia F. R. \\
-https://pt.linkedin.com/pulse/importância-de-um-plano-qualidade-software-e-testes-farias-ctfl \\
-
+Este capítulo foi construído com base na consulta e leitura dos seguintes sites:\\
+-Site LinkedIn, escrito por Claudia F. R. \\
+https://pt.linkedin.com/pulse/importância-de-um-plano-qualidade-software-e-testes-farias-ctfl 
+\\
 -Site Project Builder\\
-https://www.projectbuilder.com.br/blog/importancia-da-gestao-da-qualidade-em-projetos-2/\\
+https://www.projectbuilder.com.br/blog/importancia-da-gestao-da-qualidade-em-projetos-2/
 
 \section{Descrição técnica dos sistemas}
 \\
-https://docs.microsoft.com/pt-pt/power-platform/admin/web-application-requirements\\
+https://docs.microsoft.com/pt-pt/power-platform/admin/web-application-requirements
